basic size file reading

--- a/PA2_cjdembski/makefile
+++ b/PA2_cjdembski/makefile
@@ -2,11 +2,14 @@ CFLAGS = -g
 
 all: life
 
-life: life.o
-	gcc life.o -o life
-	
-life.o: life.c
-	gcc -Wall -c life.c
-	
+life: readFile.o life.o
+	gcc $(CFLAGS) -Wall life.o readFile.o -o life
+
+readFile.o: readFile.h readFile.c
+	gcc $(CFLAGS) -Wall -c readFile.c
+
+life.o: readFile.h life.c
+	gcc $(CFLAGS) -Wall -c life.c
+
 clean:
-	 rm -f *.o life
+	 rm -f life.o readFile.o life
