--- a/PA2_cjdembski/makefile
+++ b/PA2_cjdembski/makefile
@@ -1,3 +1,13 @@
+#Make file for CS2303: Game of life
+#WRITTEN BY: Clayton Dembski 9/15/17
+#CS2303 Lab2 makefile used as refrence
+#This makefile is used to regenerate files for the life program
+#		make readFile.o -- 	Regenerates readFile.o by compiling
+#		make life.o 		--	Regenerates life.o by compiling
+#		make life				--	Regenerates the executable life file by compiling
+#		make						--	same as "make life"
+
+
 CFLAGS = -g
 
 all: life
