accuratly identifies each indiviudal word, gives a word count

--- a/PA3_cjdembski_fjvanrossum/makefile
+++ b/PA3_cjdembski_fjvanrossum/makefile
@@ -3,11 +3,11 @@ CFLAGS = -g
 
 all: PA3
 
-PA3: PA3_cjdembsi_fjvanrossum.o
-	gcc $(CFLAGS) -Wall PA3_cjdembsi_fjvanrossum.o -o PA3
+PA3: PA3_cjdembsi_fjvanrossum.o readWords.o
+	gcc $(CFLAGS) -Wall PA3_cjdembsi_fjvanrossum.o readWords.o -o PA3
 
-readFile.o: readFile.h readFile.c
-	gcc $(CFLAGS) -Wall -c readFile.c
+readWords.o: readWords.h readWords.c
+	gcc $(CFLAGS) -Wall -c readWords.c
 
 PA3_cjdembsi_fjvanrossum.c.o: PA3_cjdembsi_fjvanrossum.c
 	gcc $(CFLAGS) -Wall -c PA3_cjdembsi_fjvanrossum.c
