--- a/PA3_cjdembski_fjvanrossum/makefile
+++ b/PA3_cjdembski_fjvanrossum/makefile
@@ -3,12 +3,15 @@ CFLAGS = -g
 
 all: PA3
 
-PA3: PA3_cjdembsi_fjvanrossum.o readWords.o
-	gcc $(CFLAGS) -Wall PA3_cjdembsi_fjvanrossum.o readWords.o -o PA3
+PA3: PA3_cjdembsi_fjvanrossum.o readWords.o tree.o
+	gcc $(CFLAGS) -Wall PA3_cjdembsi_fjvanrossum.o readWords.o tree.o -o PA3
 
 readWords.o: readWords.h readWords.c
 	gcc $(CFLAGS) -Wall -c readWords.c
 
+tree.o: tree.h tree.c
+	gcc $(CFLAGS) -Wall -c tree.c
+	
 PA3_cjdembsi_fjvanrossum.c.o: PA3_cjdembsi_fjvanrossum.c
 	gcc $(CFLAGS) -Wall -c PA3_cjdembsi_fjvanrossum.c
 
