we have an Event Queue Bois

--- a/PA4/makefile
+++ b/PA4/makefile
@@ -3,7 +3,7 @@ CFLAGS = -g
 
 all: qSim
 
-qSim: qSim.o Event.o EventQueue.o
+qSim: qSim.o Event.o EventQueue.o CustEvent.o
 	g++ $(CFLAGS) -Wall qSim.o Event.o EventQueue.o -o qSim
 
 qSim.o: qSim.cpp
@@ -14,6 +14,9 @@ Event.o: Event.cpp Event.h EventQueue.h
 
 EventQueue.o: EventQueue.cpp EventQueue.h Event.h
 	g++ $(CFLAGS) -Wall -c EventQueue.cpp
+
+CustEvent.o: CustEvent.cpp CustEvent.h Event.h
+	g++ $(CFLAGS) -Wall -c CustEvent.cpp
 
 clean:
 	 rm -f qSim.o Event.o EventQueue.o  qSim
