Made changes to custEvent

--- a/PA4/makefile
+++ b/PA4/makefile
@@ -3,7 +3,7 @@ CFLAGS = -g
 
 all: qSim
 
-qSim: qSim.o Event.o EventQueue.o 
+qSim: qSim.o Event.o EventQueue.o CustEvent.o
 	g++ $(CFLAGS) -Wall qSim.o Event.o EventQueue.o -o qSim
 
 qSim.o: qSim.cpp
