--- a/PA4/makefile
+++ b/PA4/makefile
@@ -3,8 +3,8 @@ CFLAGS = -g
 
 all: qSim
 
-qSim: qSim.o Event.o EventQueue.o CustEvent.o TellerEvent.o
-	g++ $(CFLAGS) -Wall qSim.o Event.o EventQueue.o CustEvent.o TellerEvent.o -o qSim
+qSim: qSim.o Event.o EventQueue.o CustEvent.o TellerEvent.o TellerQueue.o
+	g++ $(CFLAGS) -Wall qSim.o Event.o EventQueue.o CustEvent.o TellerEvent.o TellerQueue.o -o qSim
 
 qSim.o: qSim.cpp
 	g++ $(CFLAGS) -Wall -c qSim.cpp
@@ -21,8 +21,8 @@ CustEvent.o: CustEvent.cpp CustEvent.h Event.h
 TellerEvent.o:  TellerEvent.h Event.h TellerEvent.cpp
 	g++ $(CFLAGS) -Wall -c TellerEvent.cpp	
 
-TellerQueue.o: TellerQueue.h Event.h CustomerEvent.h TellerQueue.cpp
+TellerQueue.o: TellerQueue.h Event.h CustEvent.h TellerQueue.cpp
 	g++ $(CFLAGS) -Wall -c TellerQueue.cpp
 	
 clean:
-	 rm -f qSim.o Event.o EventQueue.o TellEvent.o CustEvent.o qSim
+	 rm -f qSim.o Event.o EventQueue.o TellerEvent.o CustEvent.o TellerQueue.o qSim
