Final code for PA4

--- a/PA4/makefile
+++ b/PA4/makefile
@@ -17,16 +17,15 @@ EventQueue.o: EventQueue.cpp EventQueue.h Event.h
 
 CustEvent.o: CustEvent.cpp CustEvent.h Event.h
 	g++ $(CFLAGS) -Wall -c CustEvent.cpp
-	
+
 TellerEvent.o: TellerEvent.cpp TellerEvent.h Event.h
-	g++ $(CFLAGS) -Wall -c TellerEvent.cpp	
-	
+	g++ $(CFLAGS) -Wall -c TellerEvent.cpp
+
 TellerList.o: TellerList.cpp TellerList.h Event.h EventQueue.h  TellerEvent.h
 	g++ $(CFLAGS) -Wall -c TellerList.cpp
 
 docs:
-	@doxygen
-	@open doxygen/html/index.html
+	doxygen doxygen
 
 clean:
 	 rm -f qSim.o Event.o EventQueue.o TellerEvent.o CustEvent.o TellerList.o qSim
